--- a/css/pairs.css
+++ b/css/pairs.css
@@ -167,12 +167,12 @@ body {
 	opacity: 0;
 }
 
-.blueDino {background-position: 0 0;}
-.brownDino {background-position: -113px 0;}
-.redDino {background-position: -226px 0;}
-.greenDino {background-position: -339px 0;}
-.purpDino {background-position: -451px 0;}
-.burgDino {background-position: -550px 0;}
+.juan {background-position: 0 0;}
+.aji {background-position: -113px 0;}
+.mufid {background-position: -226px 0;}
+.adrian {background-position: -339px 0;}
+.afifa {background-position: -451px 0;}
+.inas {background-position: -550px 0;}
 .orangeDino {background-position: -663px 0;}
 .purp2Dino {background-position: -776px 0;}
 .pinkDino {background-position: -905px 0;}
