wiih makin bener

--- a/css/pairs.css
+++ b/css/pairs.css
@@ -173,9 +173,9 @@ body {
 .adrian {background-position: -339px 0;}
 .afifa {background-position: -451px 0;}
 .inas {background-position: -550px 0;}
-.orangeDino {background-position: -663px 0;}
-.purp2Dino {background-position: -776px 0;}
-.pinkDino {background-position: -905px 0;}
+.goz {background-position: -663px 0;}
+.felik {background-position: -776px 0;}
+.anang {background-position: -905px 0;}
 
 
 #linkBack a.button {
