--- a/css/pairs.css
+++ b/css/pairs.css
@@ -5,12 +5,11 @@
 
 body {
 	text-align: center;
-	background: url(../images/greenbg.png);
 	color: #fff;
 	font-family: myriad pro;	
 }
 #gameStats{
-	background: #001711;
+	background: #000055;
 	width: 780px;
 	margin: 20px auto 20px;
 	display: block;
@@ -49,7 +48,7 @@ body {
 }
 
 #game {
-	background: #001711;
+	background: #000055;
 	width: 760px;
 	height: 470px;
 	margin: 0 auto;
@@ -82,7 +81,7 @@ body {
 }
 
 #gameIntro {
-	background:url(../images/startpage.png) top left no-repeat;
+	background:url(../images/cover.png) top left no-repeat;
 	padding: 80px 0;
 	text-align: center;
 	height: 330px;
@@ -96,20 +95,20 @@ body {
 	margin: 230px auto 0;
 	padding: 10px;
 	width: 150px;
-	border: 3px solid #006438;
-	color:#006438;
+	border: 3px solid #000055;
+	color:#000055;
 	text-decoration:none;
 }
 
 #gameIntro a.button:hover {
-	background: #006438;
+	background: #000055;
 	color:#fff;
 	text-decoration:none;
 }
 
 
 #gameComplete {
-	background:url(../images/endpage.png) top left no-repeat;
+	background:url(../images/cover.png) top left no-repeat;
 	padding: 80px 0;
 	text-align: center; 
 	height: 330px;
@@ -123,15 +122,15 @@ body {
 	margin: 50px auto 0;
 	padding: 10px;
 	width: 150px;
-	border: 5px solid #006438;
-	color:#006438;
+	border: 5px solid #000055;
+	color:#000055;
 	text-decoration:none;
 }
 
 #gameComplete p#top {
-	margin: 200px 0 0;
+	margin: 250px 0 0 0;
 	font-size: 20px;
-	color:#006438;
+	color:#000055;
 }
 
 .face {
@@ -167,15 +166,24 @@ body {
 	opacity: 0;
 }
 
-.juan {background-position: 0 0;}
-.aji {background-position: -113px 0;}
-.mufid {background-position: -226px 0;}
-.adrian {background-position: -339px 0;}
-.afifa {background-position: -451px 0;}
-.inas {background-position: -550px 0;}
-.goz {background-position: -663px 0;}
-.felik {background-position: -776px 0;}
-.anang {background-position: -905px 0;}
+.ja {background-position: 0 0;}
+.ja1 {background-position: -113px 0;}
+.ma {background-position: -226px 0;}
+.ma1 {background-position: -339px 0;}
+.ai {background-position: -451px 0;}
+.ai1 {background-position: -570px 0;}
+.gf {background-position: -680px 0;}
+.gf1 {background-position: -790px 0;}
+.aa {background-position: -905px 0;}
+.aa1 {background-position: -1018px 0;}
+.rf {background-position: -1131px 0;}
+.rf1 {background-position: -1244px 0;}
+.nr {background-position: -1357px 0;}
+.nr1 {background-position: -1470px 0;}
+.ie {background-position: -1583px 0;}
+.ie1 {background-position: -1696px 0;}
+.sa {background-position: -1809px 0;}
+.sa1 {background-position: -1922px 0;}
 
 
 #linkBack a.button {
@@ -186,13 +194,13 @@ body {
 	margin: 30px auto 0;
 	padding: 10px;
 	width: 250px;
-	border: 3px solid #006438;
-	color:#006438;
+	border: 3px solid #000055;
+	color:#000055;
 	text-decoration:none;
 }
 
 #linkBack a.button:hover {
-	background: #006438;
+	background: #000055;
 	color:#fff;
 	text-decoration:none;
 }
